--- a/_jekyll/Rakefile
+++ b/_jekyll/Rakefile
@@ -28,5 +28,5 @@ task :image_optim do
     path = image_files_to_check.join(' ')
   end
 
-  system "bundle exec image_optim --recursive #{path}"
+  system "bundle exec image_optim --no-svgo --recursive #{path}"
 end
