--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/AdobeDocs/commerce-admin.en"
-  }
+  },
+  "packageManager": "yarn@3.2.4"
 }
