--- a/_jekyll/include-relationships.yml
+++ b/_jekyll/include-relationships.yml
@@ -1,11 +1,11 @@
 ---
 metadata:
-  last_updated: 2025-09-03 14:31:41 CDT
+  last_updated: 2025-09-03 14:40:04 CDT
   description: Index of main files and their included files for automatic timestamp
     updates
-  total_relationships: 37
+  total_relationships: 38
   auto_discovered: true
-  discovery_date: 2025-09-03 14:31:41 CDT
+  discovery_date: 2025-09-03 14:40:04 CDT
 relationships:
   configuration-reference/advanced/system.md:
   - "/help/_includes/backups-note.md"
@@ -96,6 +96,8 @@ relationships:
   - "/help/_includes/persistent-cart-configuration.md"
   b2b/packages.md:
   - "/help/_includes/templated/packages.md"
+  landing/home.md:
+  - "/help/_includes/templated/whats-new.md"
   inventory-management/bulk-assignment.md:
   - "/help/_includes/unassign-source.md"
   inventory-management/inventory-transfer.md:
